@@ -93,6 +93,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
   * Only print build type once in dpkg-genchanges, instead of once for each
     specified -A or -B option and then yet another time for the general build
     type description.
+  * Unify build options description in --help output for dpkg-buildpackage
+    and dpkg-genchanges.
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
